tas-signing-pipeline-demo/manifests/infra/keycloak-operator.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ${KEYCLOAK_NAMESPACE}
