tas-signing-pipeline-demo/manifests/infra/securesign.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ${TAS_NAMESPACE}
